<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/layout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_qq"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/text_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_wechat"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_blog"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/text_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table"
            android:visibility="gone" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_show"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_phone"
        android:contentDescription="@null" />

</RelativeLayout>